# facet-enum-repr

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
facet-enum-repr/: Cargo.toml
facet-enum-repr-derive/: Cargo.toml
facet-enum-repr-derive/src/: lib.rs
facet-enum-repr/src/: lib.rs
facet-enum-repr/tests/: tests.rs
