[package]
authors.workspace = true
description = "derive proc-macro implementation for facet-derive-repr"
edition.workspace = true
license-file.workspace = true
name = "facet-enum-repr-derive"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
facet-macro-parse.workspace = true
unsynn.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true
